完成了选点功能。 本次commit包含了之前的repostory中从师兄的最初版本到完成选点功能的所有commit。列表如下（具体见说明）：
1. 将隋伟师兄的工程放到自己的电脑上（Win10+VS2010+Qt4.8.6）配置并调试通过；修改了.gitignore文件。
2. 添加了上次提交忘记添加的.gitignore文件。
3. **基本完成了所有需要的功能**
    操作说明：
    1. 点击菜单栏“工具”-“选点”，弹出对话框，输入或选择要存放标记点的根标签名称；
    2. 可以手动在该根标签下新建子标签（代表标记点的类别）并重命名；
    3. 鼠标点击要标记的点，弹出对话框，输入或选择标记点的各项属性，点击“确定”即保存该点，显示在树状结构中；
    4. 鼠标选中树状结构中的某个标记点，会在属性窗口显示其各项属性信息。
4. **优化细节**
    1. 选点过程中不再冻结窗口的其他部分；
    2. 优化assert显示；
    3. 添加上次提交未包含完全的修改；
    4. 修改编译输出目录，release版出错问题已解决（解决办法是用自己编译的Qt的dll替换工程中bin目录下的相应dll）；
5. **优化Qt图标使用方式**
    1. 将全部图标添加到.qrc文件中，并将程序中所有使用图标资源的地方作相应修改（由原来的相对路径方式改为qrc资源方式）；
6. **去掉release版本的调试信息**
    1. 之前release版本出错，为了调试寻找出错原因，在release版本添加了调试信息，现已找到出错原因（见之前的提交说明）并已解决，因此去掉了调试信息，使得生成的exe减小了很多。
7. **改变标记点存储格式与显示样式**
    1. 将标记点类改为继承cc2DLabel并经过重载作图函数，每一个标记点在模型上以一个2D标签的样式显示；
    2. 将原来基于点云的选择改为基于mesh的选择，即可以在不显示mesh顶点的状态下选点；
    3. 其他一些小优化。
8. **优化操作细节**
    1. 设置标记点属性对话框类的任务范围优化，由其自己管理各控件显示内容，并最后发出带各项值得信号给调用者；
    2. 同一类型下不能有同名点；
    3. 添加标记点时将之前添加的标记点的2D标签隐藏，只显示最后一个标记点的2D标签，在左侧树状图中选中某个标记点时显示相应点的2D标签；
    4. 标记点名称自动加后缀数字并自动增长。
9. **添加标记点颜色自动设置功能**
    1. 新类别标记点的颜色自动设置，颜色分配方案说明：按灰度从0.0到1.0对应到伪彩色（从蓝到红），灰度依次为1.0、1.0、0.5、0.25、0.75、0.125、0.375、0.625、0.875……
    2. 修复bug，之前手动修改左侧标记点树状图之后再进行标记点操作可能会导致程序崩溃。

--- a/IGITLandscapeViewer.vcxproj.filters
+++ b/IGITLandscapeViewer.vcxproj.filters
@@ -665,6 +665,45 @@
     <ClCompile Include="GeneratedFiles\Release\moc_PointCloudGenProgressDlg.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="ccPointPropertiesDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_ccPointPropertiesDlg.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_ccPointPropertiesDlg.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_ccPointPickingGenericInterface.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_ccPointPickingGenericInterface.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="ccPointPickingGenericInterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MarkedPoint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SetMarkedPointTreeRootNameDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SetMarkedPointPropertyDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_SetMarkedPointPropertyDlg.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_SetMarkedPointPropertyDlg.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_SetMarkedPointTreeRootNameDlg.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_SetMarkedPointTreeRootNameDlg.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="mainwindow.h">
@@ -827,6 +866,27 @@
       <Filter>Form Files</Filter>
     </CustomBuild>
     <CustomBuild Include="PointCloudGenProgressDlg.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="ccPointPropertiesDlg.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="ccPointPickingGenericInterface.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="ui_templates\pointPropertiesDlg.ui">
+      <Filter>Form Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="ui_templates\setMarkedPointTreeRootNameDlg.ui">
+      <Filter>Form Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="ui_templates\setMarkedPointPropertyDlg.ui">
+      <Filter>Form Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="SetMarkedPointPropertyDlg.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="SetMarkedPointTreeRootNameDlg.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
@@ -1203,9 +1263,20 @@
     <ClInclude Include="GeneratedFiles\ui_PointCloudGenProcessDlg.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
+    <ClInclude Include="GeneratedFiles\ui_pointPropertiesDlg.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MarkedPoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GeneratedFiles\ui_setMarkedPointTreeRootNameDlg.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GeneratedFiles\ui_setMarkedPointPropertyDlg.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="libs\qCC_io\CMakeLists.txt" />
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
 </Project>
