**添加线标记功能**
1. 添加MarkedLine类，实现线标记功能；
2. 使用BGL搜索得到两点之间最短路径；
3. BGL图初始化使用子线程，实现进度条显示以防卡死现象；
4. 对cc2DLabel做了几处小修改；
5. 设计MarkedObject类，所有标记物体（点、线、面、体）均继承之；
6. 添加撤销和重做功能。

--- a/IGITLandscapeViewer.vcxproj
+++ b/IGITLandscapeViewer.vcxproj
@@ -70,8 +70,8 @@
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">bin\</OutDir>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|x64'">bin\</OutDir>
-    <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\plugins;.\libs\qCC_db;.\IGIT\include;$(QTDIR)\include\QtOpenGL;.\libs\qCC_glWindow;.\db_tree;.\libs\CCFbo\include;.\libs\Glew\include;.\libs\qcustomplot;.\IGIT\triangle;.\libs\qCC_io;.\libs\ThirdParty\Eigen\include;.\libs\TextureGeneration\include;.\libs\TextureGeneration\3rdParty\opencv2.4.9\include;.\libs\TextureGeneration\3rdParty\libQGLViewer-2.5.2\QGLViewer;.\libs\TextureGeneration\3rdParty\pthreads2;.\libs\TextureGeneration\3rdParty\libMRF\libMRF;$(IncludePath)</IncludePath>
-    <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\plugins;.\libs\qCC_db;.\IGIT\include;$(QTDIR)\include\QtOpenGL;.\libs\qCC_glWindow;.\db_tree;.\libs\CCFbo\include;.\libs\Glew\include;.\libs\qcustomplot;.\IGIT\triangle;.\libs\qCC_io;.\libs\ThirdParty\Eigen\include;.\libs\TextureGeneration\include;.\libs\TextureGeneration\3rdParty\opencv2.4.9\include;.\libs\TextureGeneration\3rdParty\libQGLViewer-2.5.2\QGLViewer;.\libs\TextureGeneration\3rdParty\pthreads2;.\libs\TextureGeneration\3rdParty\libMRF\libMRF;$(IncludePath)</IncludePath>
+    <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\plugins;.\libs\qCC_db;.\IGIT\include;$(QTDIR)\include\QtOpenGL;.\libs\qCC_glWindow;.\db_tree;.\libs\CCFbo\include;.\libs\Glew\include;.\libs\qcustomplot;.\IGIT\triangle;.\libs\qCC_io;.\libs\ThirdParty\Eigen\include;.\libs\TextureGeneration\include;.\libs\TextureGeneration\3rdParty\opencv2.4.9\include;.\libs\TextureGeneration\3rdParty\libQGLViewer-2.5.2\QGLViewer;.\libs\TextureGeneration\3rdParty\pthreads2;.\libs\TextureGeneration\3rdParty\libMRF\libMRF;.\libs\TextureGeneration\3rdParty\Boost\include;$(IncludePath)</IncludePath>
+    <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\plugins;.\libs\qCC_db;.\IGIT\include;$(QTDIR)\include\QtOpenGL;.\libs\qCC_glWindow;.\db_tree;.\libs\CCFbo\include;.\libs\Glew\include;.\libs\qcustomplot;.\IGIT\triangle;.\libs\qCC_io;.\libs\ThirdParty\Eigen\include;.\libs\TextureGeneration\include;.\libs\TextureGeneration\3rdParty\opencv2.4.9\include;.\libs\TextureGeneration\3rdParty\libQGLViewer-2.5.2\QGLViewer;.\libs\TextureGeneration\3rdParty\pthreads2;.\libs\TextureGeneration\3rdParty\libMRF\libMRF;.\libs\TextureGeneration\3rdParty\Boost\include;$(IncludePath)</IncludePath>
     <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(QTDIR)\lib;.\libs\TextureGeneration\lib;.\libs\TextureGeneration\3rdParty\opencv2.4.9\lib;.\libs\TextureGeneration\3rdParty\libQGLViewer-2.5.2\QGLViewer\debug;.\libs\TextureGeneration\3rdParty\libMRF\lib;.\libs\TextureGeneration\3rdParty\pthreads2\lib;.\libs\TextureGeneration\3rdParty\pcl1.6.0\lib;$(LibraryPath)</LibraryPath>
     <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(QTDIR)\lib;.\libs\TextureGeneration\lib;.\libs\TextureGeneration\3rdParty\opencv2.4.9\lib;.\libs\TextureGeneration\3rdParty\libQGLViewer-2.5.2\QGLViewer\release;.\libs\TextureGeneration\3rdParty\libMRF\lib;.\libs\TextureGeneration\3rdParty\pthreads2\lib;.\libs\TextureGeneration\3rdParty\pcl1.6.0\lib;$(LibraryPath)</LibraryPath>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectName)_debug</TargetName>
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BoostGraphInitThread.cpp" />
     <ClCompile Include="ccCameraParamEditDlg.cpp" />
     <ClCompile Include="ccCamSensorProjectionDlg.cpp" />
     <ClCompile Include="ccColorScaleEditorDlg.cpp" />
@@ -180,6 +181,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_BoostGraphInitThread.cpp" />
     <ClCompile Include="GeneratedFiles\Debug\moc_BundlerImportDlg.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
@@ -288,7 +290,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="GeneratedFiles\Debug\moc_SetMarkedPointPropertyDlg.cpp">
+    <ClCompile Include="GeneratedFiles\Debug\moc_SetMarkedObjectPropertyDlg.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
@@ -426,7 +428,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release\moc_SetMarkedPointPropertyDlg.cpp">
+    <ClCompile Include="GeneratedFiles\Release\moc_SetMarkedObjectPropertyDlg.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
@@ -568,13 +570,16 @@
     <ClCompile Include="libs\qcustomplot\qcustomplot.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mainwindow.cpp" />
+    <ClCompile Include="MarkedLine.cpp" />
+    <ClCompile Include="MarkedObject.cpp" />
     <ClCompile Include="MarkedPoint.cpp" />
     <ClCompile Include="PMVSCamFilter.cpp" />
     <ClCompile Include="PMVSCamOpenDlg.cpp" />
     <ClCompile Include="PointCloudGenDlg.cpp" />
     <ClCompile Include="PointCloudGenProgressDlg.cpp" />
-    <ClCompile Include="SetMarkedPointPropertyDlg.cpp" />
+    <ClCompile Include="SetMarkedObjectPropertyDlg.cpp" />
     <ClCompile Include="SetMarkedPointTreeRootNameDlg.cpp" />
+    <ClCompile Include="ShortestPathComputer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="mainwindow.h">
@@ -640,22 +645,40 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GeneratedFiles\ui_setMarkedPointPropertyDlg.h" />
-    <CustomBuild Include="SetMarkedPointPropertyDlg.h">
+    <CustomBuild Include="BoostGraphInitThread.h">
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Moc%27ing SetMarkedPointPropertyDlg.h...</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Moc%27ing BoostGraphInitThread.h...</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -DWIN32 -DQT_DLL -DQT_CORE_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_QT3SUPPORT_LIB -DQT3_SUPPORT "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtXml" "-I$(QTDIR)\include\Qt3Support"</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Moc%27ing SetMarkedPointPropertyDlg.h...</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Moc%27ing BoostGraphInitThread.h...</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -DWIN32 -DQT_DLL -DQT_CORE_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_QT3SUPPORT_LIB -DQT3_SUPPORT -DNOMINMAX -DUSE_GLEW -DGLEW_STATIC -DNO_TIMER -DTRILIBRARY -D_MBCS "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtXml" "-I$(QTDIR)\include\Qt3Support"</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Moc%27ing SetMarkedPointPropertyDlg.h...</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Moc%27ing BoostGraphInitThread.h...</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -DWIN32 -DQT_DLL -DQT_NO_DEBUG -DNDEBUG -DQT_CORE_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_QT3SUPPORT_LIB -DQT3_SUPPORT "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtXml" "-I$(QTDIR)\include\Qt3Support"</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Moc%27ing SetMarkedPointPropertyDlg.h...</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Moc%27ing BoostGraphInitThread.h...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -DWIN32 -DQT_DLL -DQT_CORE_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_QT3SUPPORT_LIB -DQT3_SUPPORT -DNOMINMAX -DUSE_GLEW -DGLEW_STATIC -DNO_TIMER -DTRILIBRARY -DNODEFAULTLIB -DDEBUG "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtXml" "-I$(QTDIR)\include\Qt3Support"</Command>
+    </CustomBuild>
+    <ClInclude Include="ShortestPathComputer.h" />
+    <CustomBuild Include="SetMarkedObjectPropertyDlg.h">
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath);$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Moc%27ing SetMarkedObjectPropertyDlg.h...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -DWIN32 -DQT_DLL -DQT_CORE_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_QT3SUPPORT_LIB -DQT3_SUPPORT "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtXml" "-I$(QTDIR)\include\Qt3Support"</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(QTDIR)\bin\moc.exe;%(FullPath);$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Moc%27ing SetMarkedObjectPropertyDlg.h...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -DWIN32 -DQT_DLL -DQT_CORE_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_QT3SUPPORT_LIB -DQT3_SUPPORT -DNOMINMAX -DUSE_GLEW -DGLEW_STATIC -DNO_TIMER -DTRILIBRARY -D_MBCS "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtXml" "-I$(QTDIR)\include\Qt3Support"</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath);$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Moc%27ing SetMarkedObjectPropertyDlg.h...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -DWIN32 -DQT_DLL -DQT_NO_DEBUG -DNDEBUG -DQT_CORE_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_QT3SUPPORT_LIB -DQT3_SUPPORT "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtXml" "-I$(QTDIR)\include\Qt3Support"</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(QTDIR)\bin\moc.exe;%(FullPath);$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Moc%27ing SetMarkedObjectPropertyDlg.h...</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -DWIN32 -DQT_DLL -DQT_CORE_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_QT3SUPPORT_LIB -DQT3_SUPPORT -DNOMINMAX -DUSE_GLEW -DGLEW_STATIC -DNO_TIMER -DTRILIBRARY -DNODEFAULTLIB -DDEBUG "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtXml" "-I$(QTDIR)\include\Qt3Support"</Command>
     </CustomBuild>
@@ -717,7 +740,10 @@
     <ClInclude Include="GeneratedFiles\ui_PointCloudGenDlg.h" />
     <ClInclude Include="GeneratedFiles\ui_PointCloudGenProcessDlg.h" />
     <ClInclude Include="GeneratedFiles\ui_pointPropertiesDlg.h" />
+    <ClInclude Include="GeneratedFiles\ui_setMarkedObjectPropertyDlg.h" />
     <ClInclude Include="GeneratedFiles\ui_setMarkedPointTreeRootNameDlg.h" />
+    <ClInclude Include="MarkedLine.h" />
+    <ClInclude Include="MarkedObject.h" />
     <ClInclude Include="MarkedPoint.h" />
     <ClInclude Include="PMVSCamFilter.h" />
     <CustomBuild Include="PointCloudGenProgressDlg.h">
@@ -1853,7 +1879,7 @@
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles\ui_%(Filename).h;%(Outputs)</Outputs>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"$(QTDIR)\bin\uic.exe" -o ".\GeneratedFiles\ui_%(Filename).h" "%(FullPath)"</Command>
     </CustomBuild>
-    <CustomBuild Include="ui_templates\setMarkedPointPropertyDlg.ui">
+    <CustomBuild Include="ui_templates\setMarkedObjectPropertyDlg.ui">
       <FileType>Document</FileType>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(QTDIR)\bin\uic.exe;%(AdditionalInputs)</AdditionalInputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Uic%27ing %(Identity)...</Message>
