**添加区域标记功能** 1. 添加区域标记功能，包括计算周长、面积等属性； 2. 添加区域标记的撤销和重做功能； 3. 完善标记标签的显示规则，及时将不该显示的2D标签隐藏； 4. 属性窗口添加对标记区域（MarkedArea）的属性的显示； 5. 修改ccMesh类，添加顶点邻域点索引、顶点所属三角面片索引、顶点是否为边界点标志以及生成他们的方法，在ObjFilter类中mesh导入完成之后调用； 6. 修改cc2DLabel类中的PickedPoint结构，添加一个ccMesh指针字段（同时在cc2DLabel类中增加一个对应的addPoint方法），方便MarkedArea进行区域生长； 7. 修改ccGLWindow类中的一处不必要的assert； 8. 标记点的2D标签也改用纯文字形式显示。

--- a/IGITLandscapeViewer.vcxproj
+++ b/IGITLandscapeViewer.vcxproj
@@ -570,6 +570,7 @@
     <ClCompile Include="libs\qcustomplot\qcustomplot.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mainwindow.cpp" />
+    <ClCompile Include="MarkedArea.cpp" />
     <ClCompile Include="MarkedLine.cpp" />
     <ClCompile Include="MarkedObject.cpp" />
     <ClCompile Include="MarkedPoint.cpp" />
@@ -663,6 +664,7 @@
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -DWIN32 -DQT_DLL -DQT_CORE_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_QT3SUPPORT_LIB -DQT3_SUPPORT -DNOMINMAX -DUSE_GLEW -DGLEW_STATIC -DNO_TIMER -DTRILIBRARY -DNODEFAULTLIB -DDEBUG "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtXml" "-I$(QTDIR)\include\Qt3Support"</Command>
     </CustomBuild>
+    <ClInclude Include="MarkedArea.h" />
     <ClInclude Include="ShortestPathComputer.h" />
     <CustomBuild Include="SetMarkedObjectPropertyDlg.h">
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath);$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
